Fix mobile screen overflow

--- a/css/base.css
+++ b/css/base.css
@@ -6,6 +6,12 @@
 
 html {
 	background: #000;
+
+}
+
+.js {
+	height: 100%;
+	width: 100%;
 }
 
 body {
